[build_sphinx]
source-dir = doc
build-dir = doc/_build
all_files = 1

[upload_docs]
upload-dir = doc/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build doc/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = pysac
description = A Python package for working with SAC.
long_description = A python package providing supporting code for the analysis and generation of SAC data"
author = Stuart Mumford
author_email = s.mumford@sheffield.ac.uk
license = BSD
url = http://pysac.readthedocs.org
edit_on_github = False
github_project = swat-sheffield/pysac
